--- a/index.css
+++ b/index.css
@@ -873,6 +873,7 @@ body {
         height: 105vh;
         /* height: 125vh; */
         padding-top: 50px;
+        padding-bottom: 30px;
     }
 
     #main-section {
