--- a/index.css
+++ b/index.css
@@ -46,18 +46,6 @@ body {
     display: none;
 }
 
-/* #navbar {
-    width: 100%;
-    height: 90px;
-    border: 0px solid red;
-    display: flex;
-    flex-wrap: nowrap;
-    margin: auto;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 3rem;
-    padding-right: 3rem;
-} */
 
 .nav-header .logo {
     height: 2rem;
@@ -122,7 +110,7 @@ body {
     align-items: center;
     /* border: 1px solid red; */
     margin-top: 5%;
-    padding-top: 12%;
+    padding-top: 13%;
 
 }
 
@@ -145,8 +133,6 @@ body {
 
 .header .smaller-text-2 {
     font-size: 3.5rem;
-    /* font-weight: 500; */
-    font-family: 'Montserrat', sans-serif;
     color: #030200;
     /* padding-left: 1.2em; */
 }
@@ -156,7 +142,7 @@ body {
     top: 29%;
     left: 8%; */
     margin-right: 3%;
-    margin-top: -9%;
+    margin-top: -12%;
     width: 150px;
     height: auto;
 
@@ -179,7 +165,6 @@ body {
 }
 
 .bgImg-change-link-3 {
-    /* font-size: 2.8rem; */
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
 }
@@ -190,7 +175,8 @@ body {
 
 .coffee-wraper {
     position: relative;
-    bottom: -28%;
+    bottom: -25%;
+    /* margin-bottom: -28%; */
     right: -2%;
 }
 
@@ -198,13 +184,6 @@ body {
     max-width: 100%;
     height: auto;
 }
-
-/* for change bg-img */
-
-/* .banner-container .header span:hover {
-    cursor: pointer; 
-    color: #fff;
-} */
 
 
 
@@ -617,12 +596,10 @@ body {
     .navbar {
         /* display: none; */
         width: 100%;
-        /* height: 10vh; */
         background-color: #fff;
         position: absolute;
         top: 0;
         left: 0;
-/* z-index: 89898; */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -660,7 +637,6 @@ body {
 
 
     .nav-links {
-        /* background: #fff; */
         flex-direction: column;
         align-items: center;
         font-size: 1rem;
@@ -681,6 +657,7 @@ body {
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
+        padding-top: 2%;
     }
 
     .header {
@@ -706,7 +683,7 @@ body {
     .gun-img-wrapper {
         width: 40px;
         margin-right: 0%;
-        margin-top: 1%;
+        margin-top: 14%;
     }
 
     .coffee-wraper img {
@@ -714,7 +691,7 @@ body {
     }
 
     .coffee-wraper {
-        bottom: 8%;
+        bottom: 10%;
         right: 0%;
     }
 
@@ -1179,8 +1156,8 @@ body {
     
     
 .nav-links {
-    gap: 0.2rem;
-    font-size: 0.8rem;
+    gap: 0.1rem;
+    font-size: 0.9rem;
     font-weight: 400;
 }
 
