--- a/index.css
+++ b/index.css
@@ -384,7 +384,7 @@ body {
 .c-item-div-1 .img-div {
     /* border: 2px solid blue; */
     margin-top: -4%;
-    
+
 }
 
 .c-img {
@@ -500,11 +500,11 @@ body {
     /* align-items: center; */
 }
 
-.s-card-1>div {
-    /* border: 1px solid; */
-}
+/* .s-card-1>div {
+    border: 1px solid;
+} */
 
-.s-card-1 > div:nth-child(2){
+.s-card-1>div:nth-child(2) {
     /* border: 1px solid red; */
     padding-right: 12rem;
 }
@@ -522,9 +522,10 @@ body {
     /* padding-left: 10px; */
 }
 
-.section-1 .s-card-2 {
-    /* border: 0px solid; */
-}
+
+/* .section-1 .s-card-2 {
+    border: 1px solid;
+} */
 
 
 .s-card-2 .info-card {
@@ -572,9 +573,9 @@ body {
 
 
 
-#scrollbtn{
+#scrollbtn {
     position: fixed;
-    bottom:30px;
+    bottom: 30px;
     right: 20px;
     z-index: 10000;
     /* background-color:#f8d200;; */
@@ -800,7 +801,7 @@ body {
         border: 0px solid blue;
         margin: auto;
     }
-    
+
 
     .c-item {
         margin-top: 70px;
@@ -883,7 +884,7 @@ body {
     .section-1 .social-links img {
         width: 40px;
     }
-    
+
     #main-section .section-2 {
         width: 98%;
     }
@@ -1029,7 +1030,7 @@ body {
         height: 60vh;
         display: flex;
     }
-    
+
     .chat-message h2 {
         line-height: 1.2;
         font-size: 1.4rem;
@@ -1060,7 +1061,7 @@ body {
         margin: auto;
         border: 0px solid red;
     }
-    
+
     .c-item {
         margin-top: 100px;
         padding-left: 50px;
@@ -1094,6 +1095,7 @@ body {
         max-width: 100%;
         height: 400px;
     }
+
     .c-item-div-2 {
         display: none;
     }
@@ -1109,24 +1111,24 @@ body {
         width: 98%;
 
     }
-    
+
     .section-1 .say-hi-img-div img {
         height: 220px;
     }
 
-    .s-card-1 > div:nth-child(2){
+    .s-card-1>div:nth-child(2) {
         /* border: 1px solid red; */
         padding-right: 5rem;
     }
-    
+
     .section-1 .s-card-1 p {
         font-size: 1.2rem;
         /* line-height: 1.2; */
     }
 
     .s-card-2 {
-      width: 150%; 
-      /* border: 2px solid;  */
+        width: 150%;
+        /* border: 2px solid;  */
     }
 
     .section-1 .s-card-2 li a {
@@ -1134,7 +1136,7 @@ body {
         font-weight: 600;
         line-height: 2;
     }
-    
+
     .section-1 .social-links img {
         width: 40px;
     }
@@ -1144,7 +1146,7 @@ body {
         text-align: left;
         padding-top: 10px;
     }
-    
+
     #main-section .section-2 {
         width: 98%;
     }
@@ -1152,30 +1154,31 @@ body {
 
 
 
-@media (min-width: 989px) and (max-width: 1281px){
-    
-    
-.nav-links {
-    gap: 0.1rem;
-    font-size: 0.9rem;
-    font-weight: 400;
-}
+@media (min-width: 989px) and (max-width: 1281px) {
+
+
+    .nav-links {
+        gap: 0.1rem;
+        font-size: 0.9rem;
+        font-weight: 400;
+    }
 
     .banner-container .header-wrapper {
         max-width: 95%;
         height: 90%;
         padding-top: 3%;
-    
+
     }
+
     .header h1 {
         font-size: 3.6rem;
     }
-    
-    
+
+
     .header .smaller-text {
         font-size: 3.2rem;
     }
-    
+
     .header .smaller-text-2 {
         font-size: 2.8rem;
     }
@@ -1191,11 +1194,11 @@ body {
         width: 48%;
 
     }
-    
+
     .section-1 .say-hi-img-div img {
         height: 240px;
     }
-    
+
     .section-1 .s-card-1 p {
         font-size: 1.2rem;
         line-height: 1.5;
@@ -1205,7 +1208,7 @@ body {
     .section-1 .s-card-2 li a {
         font-size: 1.2rem;
     }
-    
+
     .section-1 .social-links img {
         width: 40px;
     }
@@ -1216,5 +1219,3 @@ body {
         padding-top: 10px;
     }
 }
-
-
